# document_engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
ai/: openai.py
ai/prompts/: __init__.py
analyzers/: __init__.py  chapters.py  code_blocks.py  headings.py  language.py  references.py
builders/: html.py  json.py  tiptap.py
cli/: __init__.py  main.py
core/: __init__.py  document.py  pipeline.py  result.py
exporters/: __init__.py  html.py  json.py  markdown.py
extractors/: __init__.py
extractors/epub/: __init__.py
extractors/pdf/: links.py  pdfplumber.py  pymupdf.py  tables.py
extractors/ppt/: __init__.py
extractors/word/: docx.py  images.py  tables.py
models/: metadata.py
plugins/: __init__.py
src/document_engine/ai/: __init__.py  deepseek.py  orchestrator.py
src/document_engine/analyzers/: math.py  statistics.py
src/document_engine/builders/: __init__.py  markdown.py
src/document_engine/core/: pipeline.py  registry.py
src/document_engine/extractors/html/: __init__.py
src/document_engine/extractors/markdown/: __init__.py
src/document_engine/extractors/pdf/: __init__.py  images.py  metadata.py  pdfplumber.py  pymupdf.py  toc.py
src/document_engine/extractors/ppt/: __init__.py
src/document_engine/extractors/word/: __init__.py
src/document_engine/models/: __init__.py  document.py
src/document_engine/tests/: test_analyzers.py  test_document.py  test_extractors.py
tests/: conftest.py  test_builders.py  test_pipeline.py  test_upload.py
